--- a/index.html
+++ b/index.html
@@ -427,154 +427,20 @@ body {
   opacity: 0;
 }
 
-.app-window {
+.app-screenshot {
   border-radius: var(--radius-lg);
   overflow: hidden;
-  background: rgba(15, 15, 30, 0.6);
-  border: 1px solid rgba(255, 255, 255, 0.08);
-  backdrop-filter: blur(var(--glass-blur-heavy));
-  -webkit-backdrop-filter: blur(var(--glass-blur-heavy));
   box-shadow:
     0 24px 80px rgba(0, 0, 0, 0.5),
-    0 0 0 1px rgba(255, 255, 255, 0.05),
-    inset 0 1px 0 rgba(255, 255, 255, 0.06);
+    0 0 0 1px rgba(255, 255, 255, 0.08);
 }
 
-.app-titlebar {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 14px 18px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+.app-screenshot img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: var(--radius-lg);
 }
-
-.titlebar-dot {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-}
-
-.titlebar-dot:nth-child(1) { background: #ff5f57; }
-.titlebar-dot:nth-child(2) { background: #febc2e; }
-.titlebar-dot:nth-child(3) { background: #28c840; }
-
-.app-body {
-  display: flex;
-  min-height: 400px;
-}
-
-.app-sidebar {
-  width: 220px;
-  border-right: 1px solid rgba(255, 255, 255, 0.05);
-  padding: 16px 12px;
-  flex-shrink: 0;
-}
-
-.sidebar-search {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 8px 12px;
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.04);
-  border: 1px solid rgba(255, 255, 255, 0.06);
-  margin-bottom: 16px;
-  color: var(--text-tertiary);
-  font-size: 13px;
-}
-
-.sidebar-category {
-  margin-bottom: 4px;
-}
-
-.sidebar-category-label {
-  font-size: 11px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
-  color: var(--text-tertiary);
-  padding: 8px 12px 4px;
-}
-
-.sidebar-item {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 7px 12px;
-  border-radius: 8px;
-  font-size: 13px;
-  color: var(--text-secondary);
-  cursor: default;
-  transition: all 0.15s ease;
-}
-
-.sidebar-item.active {
-  background: rgba(0, 122, 255, 0.12);
-  color: var(--text-primary);
-}
-
-.sidebar-icon {
-  width: 18px;
-  height: 18px;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10px;
-  flex-shrink: 0;
-}
-
-.app-main {
-  flex: 1;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.app-main-header {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 4px;
-}
-
-.app-editor {
-  flex: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 12px;
-}
-
-.editor-pane {
-  border-radius: 12px;
-  background: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.05);
-  padding: 14px;
-  font-family: 'SF Mono', 'Fira Code', 'Cascadia Code', monospace;
-  font-size: 12px;
-  line-height: 1.6;
-  color: var(--text-secondary);
-  overflow: hidden;
-}
-
-.editor-label {
-  font-family: 'Inter', sans-serif;
-  font-size: 11px;
-  font-weight: 500;
-  color: var(--text-tertiary);
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  margin-bottom: 10px;
-}
-
-.code-line { display: flex; gap: 16px; }
-.code-ln { color: rgba(255, 255, 255, 0.15); user-select: none; min-width: 16px; text-align: right; }
-.code-key { color: #89b4fa; }
-.code-str { color: #a6e3a1; }
-.code-num { color: #fab387; }
-.code-bool { color: #f38ba8; }
-.code-brace { color: rgba(255, 255, 255, 0.4); }
-.code-indent { padding-left: 16px; }
 
 /* ═══════════════════════════════════════════
    TOOLS GRID SECTION
@@ -802,68 +668,19 @@ body {
   align-items: center;
 }
 
-.pipeline-visual {
+.pipeline-screenshot {
   border-radius: var(--radius-lg);
-  padding: 40px;
-  position: relative;
   overflow: hidden;
-  min-height: 360px;
+  box-shadow:
+    0 16px 48px rgba(0, 0, 0, 0.4),
+    0 0 0 1px rgba(255, 255, 255, 0.08);
 }
 
-.pipeline-visual::before {
-  content: '';
-  position: absolute;
-  top: 0; left: 0; right: 0;
-  height: 1px;
-  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
-}
-
-.pipeline-nodes {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.pipeline-node {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  padding: 14px 18px;
-  border-radius: 12px;
-  background: rgba(255, 255, 255, 0.04);
-  border: 1px solid rgba(255, 255, 255, 0.06);
-  font-size: 14px;
-  font-weight: 500;
-  position: relative;
-}
-
-.pipeline-node::before {
-  content: '';
-  position: absolute;
-  left: 32px;
-  top: 100%;
-  width: 2px;
-  height: 24px;
-  background: linear-gradient(to bottom, rgba(0, 122, 255, 0.3), transparent);
-}
-
-.pipeline-node:last-child::before { display: none; }
-
-.pipeline-node-icon {
-  width: 32px;
-  height: 32px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  flex-shrink: 0;
-}
-
-.pipeline-node-arrow {
-  margin-left: auto;
-  color: var(--text-tertiary);
-  font-size: 12px;
+.pipeline-screenshot img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: var(--radius-lg);
 }
 
 .pipeline-content h3 {
@@ -1101,8 +918,6 @@ body {
   .tools-grid { grid-template-columns: repeat(2, 1fr); }
   .features-grid { grid-template-columns: 1fr; }
   .nav-links { display: none; }
-  .app-sidebar { display: none; }
-  .app-editor { grid-template-columns: 1fr; }
   .hero { padding: 100px 20px 60px; }
   .hero-actions { flex-direction: column; width: 100%; }
   .btn-primary, .btn-secondary { width: 100%; justify-content: center; }
@@ -1182,83 +997,10 @@ body {
       macOS, Windows &amp; Linux <span>·</span> Built with Tauri <span>·</span> v0.1.0
     </p>
 
-    <!-- App Window Preview -->
+    <!-- App Screenshot -->
     <div class="app-preview">
-      <div class="app-window">
-        <div class="app-titlebar">
-          <span class="titlebar-dot"></span>
-          <span class="titlebar-dot"></span>
-          <span class="titlebar-dot"></span>
-        </div>
-        <div class="app-body">
-          <div class="app-sidebar">
-            <div class="sidebar-search">
-              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-              Search tools...
-            </div>
-            <div class="sidebar-category">
-              <div class="sidebar-category-label">Formatting</div>
-              <div class="sidebar-item active">
-                <span class="sidebar-icon" style="background:rgba(250,179,135,0.15);color:var(--color-format)">{ }</span>
-                JSON Formatter
-              </div>
-              <div class="sidebar-item">
-                <span class="sidebar-icon" style="background:rgba(250,179,135,0.15);color:var(--color-format)">
-                  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M3 9h18"/><path d="M9 21V9"/></svg>
-                </span>
-                SQL Formatter
-              </div>
-            </div>
-            <div class="sidebar-category">
-              <div class="sidebar-category-label">Encoding</div>
-              <div class="sidebar-item">
-                <span class="sidebar-icon" style="background:rgba(166,227,161,0.15);color:var(--color-encode)">B6</span>
-                Base64
-              </div>
-              <div class="sidebar-item">
-                <span class="sidebar-icon" style="background:rgba(166,227,161,0.15);color:var(--color-encode)">%</span>
-                URL Encode
-              </div>
-            </div>
-            <div class="sidebar-category">
-              <div class="sidebar-category-label">Crypto</div>
-              <div class="sidebar-item">
-                <span class="sidebar-icon" style="background:rgba(243,139,168,0.15);color:var(--color-crypto)">#</span>
-                Hash Gen
-              </div>
-              <div class="sidebar-item">
-                <span class="sidebar-icon" style="background:rgba(243,139,168,0.15);color:var(--color-crypto)">
-                  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="11" width="18" height="11" rx="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
-                </span>
-                JWT Decode
-              </div>
-            </div>
-          </div>
-          <div class="app-main">
-            <div class="app-main-header">JSON Formatter</div>
-            <div class="app-editor">
-              <div class="editor-pane">
-                <div class="editor-label">Input</div>
-                <div class="code-line"><span class="code-ln">1</span><span class="code-brace">{</span></div>
-                <div class="code-line"><span class="code-ln">2</span><span class="code-indent"><span class="code-key">"name"</span><span class="code-brace">:</span> <span class="code-str">"DevToolbox"</span><span class="code-brace">,</span></span></div>
-                <div class="code-line"><span class="code-ln">3</span><span class="code-indent"><span class="code-key">"version"</span><span class="code-brace">:</span> <span class="code-str">"0.1.0"</span><span class="code-brace">,</span></span></div>
-                <div class="code-line"><span class="code-ln">4</span><span class="code-indent"><span class="code-key">"tools"</span><span class="code-brace">:</span> <span class="code-num">36</span><span class="code-brace">,</span></span></div>
-                <div class="code-line"><span class="code-ln">5</span><span class="code-indent"><span class="code-key">"free"</span><span class="code-brace">:</span> <span class="code-bool">true</span></span></div>
-                <div class="code-line"><span class="code-ln">6</span><span class="code-brace">}</span></div>
-              </div>
-              <div class="editor-pane">
-                <div class="editor-label">Output — Formatted</div>
-                <div class="code-line"><span class="code-ln">1</span><span class="code-brace">{</span></div>
-                <div class="code-line"><span class="code-ln">2</span><span class="code-indent"><span class="code-key">"name"</span>:    <span class="code-str">"DevToolbox"</span>,</span></div>
-                <div class="code-line"><span class="code-ln">3</span><span class="code-indent"><span class="code-key">"version"</span>: <span class="code-str">"0.1.0"</span>,</span></div>
-                <div class="code-line"><span class="code-ln">4</span><span class="code-indent"><span class="code-key">"tools"</span>:   <span class="code-num">36</span>,</span></div>
-                <div class="code-line"><span class="code-ln">5</span><span class="code-indent"><span class="code-key">"free"</span>:    <span class="code-bool">true</span></span></div>
-                <div class="code-line"><span class="code-ln">6</span><span class="code-brace">}</span></div>
-                <div class="code-line" style="margin-top:8px;color:rgba(166,227,161,0.6)"><span class="code-ln"> </span>✓ Valid JSON · 6 lines</div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="app-screenshot">
+        <img src="images/app-json-formatter.png" alt="DevToolbox — JSON Formatter with syntax highlighting, sidebar navigation, and 36+ developer tools" width="960" height="600" loading="eager">
       </div>
     </div>
   </section>
@@ -1442,42 +1184,8 @@ body {
   <section class="section pipeline-section" id="pipeline">
     <div class="container">
       <div class="pipeline-showcase reveal">
-        <div class="pipeline-visual glass">
-          <div class="pipeline-nodes">
-            <div class="pipeline-node">
-              <div class="pipeline-node-icon" style="background:rgba(166,227,161,0.12);color:var(--color-encode)">B6</div>
-              <div>
-                <div style="font-weight:600;font-size:14px">Base64 Decode</div>
-                <div style="font-size:12px;color:var(--text-tertiary);margin-top:2px">Decode incoming payload</div>
-              </div>
-              <span class="pipeline-node-arrow">→</span>
-            </div>
-            <div class="pipeline-node">
-              <div class="pipeline-node-icon" style="background:rgba(250,179,135,0.12);color:var(--color-format)">{ }</div>
-              <div>
-                <div style="font-weight:600;font-size:14px">JSON Format</div>
-                <div style="font-size:12px;color:var(--text-tertiary);margin-top:2px">Pretty-print the structure</div>
-              </div>
-              <span class="pipeline-node-arrow">→</span>
-            </div>
-            <div class="pipeline-node">
-              <div class="pipeline-node-icon" style="background:rgba(243,139,168,0.12);color:var(--color-crypto)">#</div>
-              <div>
-                <div style="font-weight:600;font-size:14px">Hash (SHA-256)</div>
-                <div style="font-size:12px;color:var(--text-tertiary);margin-top:2px">Generate integrity hash</div>
-              </div>
-              <span class="pipeline-node-arrow">→</span>
-            </div>
-            <div class="pipeline-node">
-              <div class="pipeline-node-icon" style="background:rgba(203,166,247,0.12);color:var(--color-misc)">
-                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="8" y="2" width="8" height="4" rx="1" ry="1"/><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/></svg>
-              </div>
-              <div>
-                <div style="font-weight:600;font-size:14px">Copy to Clipboard</div>
-                <div style="font-size:12px;color:var(--text-tertiary);margin-top:2px">Output ready to paste</div>
-              </div>
-            </div>
-          </div>
+        <div class="pipeline-screenshot">
+          <img src="images/app-pipeline-builder.png" alt="DevToolbox Pipeline Builder — visual node editor for chaining tools into custom workflows" width="600" height="450" loading="lazy">
         </div>
         <div class="pipeline-content">
           <span class="section-label">Pipeline Builder</span>
