--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@ body {
     </p>
 
     <div class="hero-actions">
-      <a href="#download" class="btn-primary">
+      <a href="DevToolbox-0.1.0-mac-arm64.dmg" class="btn-primary" download>
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
           <polyline points="7 10 12 15 17 10"></polyline>
@@ -1221,7 +1221,7 @@ body {
         <h2 class="cta-title">Ready to streamline<br>your workflow?</h2>
         <p class="cta-desc">Download DevToolbox and get 36+ essential developer tools, all running natively on your machine.</p>
         <div class="cta-actions">
-          <a href="#" class="btn-primary">
+          <a href="DevToolbox-0.1.0-mac-arm64.dmg" class="btn-primary" download>
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
               <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
               <polyline points="7 10 12 15 17 10"></polyline>
