Add favicon for DevToolbox site
SVG code brackets icon in blue-to-purple gradient, matching the brand theme.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DevToolbox — Every Dev Tool You Need, One App</title>
 <meta name="description" content="36+ developer tools in one beautiful desktop app. JSON formatting, UUID generation, Base64 encoding, JWT decoding, and more. Free, offline, private.">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=SF+Pro+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
